fix rendering artifacts introduced by calling winId

winId shall not be called on non-native widgets

just call effectiveWinId that will handle this for us

BUG: 411965


(cherry picked from commit 343bc39548f0c42386ba983167b075b2940d626b)